--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
 	"autoload": {
-		"files": ["some-test-file.php", "includes/some-test-file-2.php"],
 		"psr-4": {
-			"Plugin\\Includes\\": "includes"
+			"WHPluginComposer\\Includes\\": "includes"
 		}
 	}
 }
